deploy/local/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../deploy.yaml
    kompose.image-pull-policy: Always
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: userservice
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../deploy.yaml
        kompose.image-pull-policy: Always
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/mesher-default: "true"
        io.kompose.service: userservice
    spec:
      containers:
        - image: ghcr.io/peter0202/u2-user-service:main
          imagePullPolicy: Always
          name: userservice
          # args:
          # - /bin/sh
          # - -c
          # - touch /tmp/healthy
          # ports:
          #   - name: liveness-port
          #     containerPort: 8080
          # resources:
          #   requests:
          #     cpu: 150m
          #   limits:
          #     cpu: 150m
      restartPolicy: Always
