deploy/local/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../deploy.yaml
    kompose.image-pull-policy: Always
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: userservice
